# O365_python_email_client

./: LICENSE  README.md  pyproject.toml
.github/workflows/: main.yml
src/O365_python_email_client/: __init__.py  send_email_via_O365.py  send_email_via_o365.py
